# astro_ws

install/: local_setup.sh  setup.sh
install/bot_controller/lib/bot_controller/: controller_node
install/bot_controller/share/bot_controller/: package.sh  package.xml
install/can_motor/lib/can_motor/: can_motor_node
install/can_motor/share/can_motor/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/custom_messages/include/custom_messages/custom_messages/msg/: can_msg.hpp  dino.h  dino.hpp  motor_command.h  yolo_detection.hpp  yolo_detection_array.h  (+1 more)
install/custom_messages/share/custom_messages/: local_setup.sh  package.sh
install/custom_messages/share/custom_messages/cmake/: ament_cmake_export_dependencies-extras.cmake  export_custom_messages__rosidl_generator_pyExport.cmake  rosidl_cmake-extras.cmake
install/custom_messages/share/custom_messages/msg/: CanMsg.idl  Dino.idl  MotorCommand.idl  YoloDetection.idl
install/custom_messages/share/custom_messages/srv/: ResetOdom.idl  ResetOdom_Response.msg
install/ds4_driver/share/ds4_driver/: local_setup.sh  package.sh
install/ds4_driver_msgs/share/ds4_driver_msgs/: package.sh
log/: latest_build
src/bot_controller/: setup.py
src/bot_controller/bot_controller/: app_control.py  auto_control.py  control_bot.py  odometry.py  udpserver.py  wifitest.py
src/can_driver/: setup.cfg  setup.py
src/can_driver/can_driver/: can_driver (copy).py  can_driver.py
src/can_motor/: setup.py
src/custom_messages/: CMakeLists.txt
src/custom_messages/msg/: GameSir.msg  MotorCommand.msg
(+65 files in other folders)
